package main.java.com.luisreneonate.pittmanparkpickup.dynamodb.models;

public class User {
}
